--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ a {
 .fix-container {
 	max-width: 1704px;
 	margin: 0 auto;
-	padding: 0 48px 0 50px;
+	padding: 0 49px;
 }
 
 .link {
@@ -124,7 +124,7 @@ button {
 }
 
 .swiper-button-disabled {
-	background: #b0b0b0;
+	opacity: 0.5;
 	pointer-events: none;
 }
 .swiper-button-disabled svg path {
@@ -163,13 +163,13 @@ button {
 	width: 100%;
 	object-fit: contain;
 }
-.header__unity {
+.header__unity,
+.header__menu {
 	display: flex;
-	align-items: center;
 	justify-content: space-between;
 }
 .unity-top {
-	padding: 29px 0 30px;
+	padding: 30px 0 30px;
 }
 
 .header__burger {
@@ -425,7 +425,7 @@ button {
 }
 
 .unity-bottom {
-	padding: 22px 0 20px;
+	padding: 21px 0 20px;
 }
 
 .item-bottom {
@@ -494,7 +494,7 @@ button {
 	display: flex;
 	position: absolute;
 	left: 0;
-	bottom: -2px;
+	bottom: 0;
 	border: none;
 	background-color: transparent;
 }
@@ -641,6 +641,7 @@ input::-webkit-search-results-decoration {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	object-position: -11px;
 }
 
 .start__info {
@@ -709,6 +710,7 @@ input::-webkit-search-results-decoration {
 	background: url(../img/gallery/birmingham-museums-trust-MK_98NuC4-4-unsplash3.webp)
 		no-repeat;
 	background-size: cover;
+	background-position-x: -11px;
 }
 
 .gallery__title {
@@ -909,7 +911,7 @@ input::-webkit-search-results-decoration {
 .history__unity-block {
 	display: flex;
 	flex-direction: column;
-	padding: 78px 0 83px;
+	padding: 78px 0 86px;
 }
 
 .history__countries {
@@ -1042,8 +1044,10 @@ input::-webkit-search-results-decoration {
 	cursor: pointer;
 	position: relative;
 	border-top: 1px solid #cacaca;
-	padding: 43px 0 44px;
+	border-bottom: 1px solid transparent;
+	padding: 41px 0 40px;
 	font-size: 24px;
+	line-height: 32px;
 	font-weight: 600;
 	transition: color 0.3s ease-in-out;
 }
@@ -1051,8 +1055,9 @@ input::-webkit-search-results-decoration {
 .ui-state-active {
 	border-color: #7943a4;
 	border-bottom: 1px solid #9d5cd0;
-	margin-bottom: 26px;
+	margin-bottom: 25px;
 	color: #9d5cd0;
+	padding: 40px 0 42px;
 }
 
 .history__button {
@@ -1063,7 +1068,7 @@ input::-webkit-search-results-decoration {
 	float: right;
 	border-radius: 30px;
 	position: absolute;
-	right: 6px;
+	right: 7px;
 	top: 32px;
 	transition: 0.9s ease;
 }
@@ -1077,27 +1082,27 @@ input::-webkit-search-results-decoration {
 	content: "";
 	position: absolute;
 	display: block;
-	top: 44%;
+	top: 45%;
 	width: 1px;
-	height: 11px;
+	height: 12px;
 	background-color: black;
 }
 
 .history__button::before {
 	transform: rotate(45deg);
-	right: 42%;
+	right: 40%;
 }
 
 .history__button::after {
 	transform: rotate(135deg);
-	left: 40%;
+	left: 41%;
 }
 
 .history__content {
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	height: 310px;
+	height: 312px;
 	width: 100%;
 	padding-right: 76px;
 }
@@ -1288,15 +1293,15 @@ input::-webkit-search-results-decoration {
 }
 .events__button {
 	display: flex;
-	justify-content: center;
+
 	align-items: center;
-	padding: 14px 33px;
+	padding: 15px 33px;
 	color: #9d5cd0;
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 25px;
 	margin: 0 auto 80px;
-	border: 3px solid #9d5cd0;
+	border: 2px solid #9d5cd0;
 }
 
 .more {
@@ -1319,6 +1324,7 @@ input::-webkit-search-results-decoration {
 }
 .editions__elem {
 	padding-bottom: 1.4px;
+	display: flex;
 }
 .editions__title {
 	color: #ffffff;
@@ -1600,6 +1606,7 @@ i {
 .detailed__descr a {
 	font-size: 16px;
 	font-weight: 600;
+	color: #9d5cd0;
 }
 /*_____Восьмой блок_______*/
 
@@ -1624,8 +1631,7 @@ i {
 	width: 450px;
 	margin: 0 auto;
 	height: 150px;
-	border: 1px solid black;
-
+	border: 1px solid #cacaca;
 	opacity: 0.5;
 	transition: opacity 0.5s ease;
 }
@@ -1678,7 +1684,9 @@ i {
 	margin-bottom: 0;
 	position: relative;
 }
-
+.contacts__title {
+	margin-bottom: 22px;
+}
 .contacts__info {
 	display: flex;
 }
@@ -1692,9 +1700,10 @@ i {
 
 .contacts__left {
 	display: flex;
-	padding: 127px 0px 103px 29px;
+	padding: 125px 0px 102px 27px;
 	flex-direction: column;
 	z-index: 1;
+	position: relative;
 }
 
 .contacts__footer {
@@ -1716,10 +1725,12 @@ i {
 .form input {
 	width: 400px;
 	border-radius: 100px;
-	padding: 10px 23px;
+	padding-top: 10px;
+	padding-left: 22px;
 	justify-self: start;
 	transition: background-color 0.5s ease;
 	border: 1px solid #333333;
+	order: 2;
 }
 
 .form-active {
@@ -1736,8 +1747,12 @@ i {
 .form__tel {
 	margin-bottom: 23px;
 }
+.form__name {
+	padding-bottom: 9px;
+}
 .form__tel {
 	margin-bottom: 22px;
+	padding-bottom: 10px;
 }
 .form__button {
 	padding: 17px 33px;
@@ -1747,6 +1762,7 @@ i {
 	margin-bottom: 40px;
 	color: #9d5cd0;
 	border: 2px solid #9d5cd0;
+	order: 3;
 }
 
 .form__title,
@@ -1761,12 +1777,13 @@ i {
 }
 
 .form__title {
-	margin-bottom: 18px;
+	margin-bottom: 19px;
+	order: 0;
 }
 
 .contacts__communication {
 	font-size: 24px;
-	margin-bottom: 17px;
+	margin-bottom: 18px;
 	font-weight: normal;
 }
 
@@ -1796,7 +1813,12 @@ i {
 	background-repeat: no-repeat;
 	transition: opacity 0.5s ease;
 }
-
+.mess {
+	position: absolute;
+	bottom: 27%;
+	left: 30px;
+	right: 0;
+}
 .alert {
 	display: flex;
 	align-items: center;
@@ -1805,7 +1827,8 @@ i {
 	background-color: rgba(43, 5, 5, 0.541);
 	color: rgb(255, 255, 255);
 	z-index: 9;
-	height: 50px;
+	padding: 5px 0px;
+
 	border-radius: 20px;
 	margin: 20px 0;
 }
@@ -1822,7 +1845,14 @@ i {
 	display: none;
 }
 .js-validate-error-label {
+	order: 1;
 	margin-bottom: 10px;
+	position: absolute;
+	top: -20px;
+	left: 15px;
+}
+.form__input-block {
+	position: relative;
 }
 /*_________Футер__________*/
 
@@ -1834,7 +1864,7 @@ footer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 46px 0;
+	padding: 47px 0;
 }
 
 .footer__social-block {
@@ -1933,7 +1963,6 @@ footer {
 .history__title-button:focus {
 	color: #9d5cd0;
 	outline-color: transparent;
-	border-bottom: 1px solid #9d5cd0;
 	border-color: #9d5cd0;
 }
 
@@ -2148,7 +2177,9 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		display: flex;
 		flex-direction: row;
 	}
-
+	.fix-container {
+		padding: 0 49px 0 50px;
+	}
 	.header__top {
 		width: 100%;
 	}
@@ -2160,7 +2191,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		justify-content: flex-end;
 	}
 	.unity-top {
-		padding: 29px 0px;
+		padding: 30px 0px 26px;
 		flex-wrap: wrap;
 	}
 	.header__akk,
@@ -2203,8 +2234,9 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		color: grey;
 	}
 	.header__logo {
-		width: 186px;
-		margin-right: 8px;
+		width: 188px;
+		height: 44px;
+		margin-right: 7px;
 	}
 
 	.header__menu {
@@ -2264,8 +2296,8 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		margin-right: 0px;
 		position: inherit;
 		padding: 0;
-		left: -1px;
-		bottom: 0px;
+		left: 1px;
+		bottom: -6px;
 	}
 
 	.history__header {
@@ -2331,8 +2363,6 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 	.gallery__left {
 		width: 435px;
-		z-index: 1;
-		margin-right: 48px;
 	}
 	.btn__right {
 		left: -3px;
@@ -2341,9 +2371,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.list__counter {
 		margin-right: 23px;
 	}
-	.swiper__img-block {
-		height: 284px;
-	}
+
 	.gallery__right {
 		height: 684px;
 	}
@@ -2379,12 +2407,12 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		margin-bottom: 7px;
 	}
 	.history__left {
-		margin-right: 48px;
+		margin-right: 50px;
 		flex-basis: 47%;
 	}
 
 	.history__unity-block {
-		padding: 86px 0 84px;
+		padding: 86px 0;
 	}
 	.history__title {
 		margin-top: 0;
@@ -2400,7 +2428,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		width: 290px;
 	}
 	.history__button {
-		right: 2px;
+		right: 0px;
 	}
 	.history__name {
 		margin-bottom: 13px;
@@ -2417,18 +2445,22 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 
 	.history__title-button {
-		padding: 43px 0 44px;
+		padding: 41px 0 40px;
 	}
 	.ui-state-active {
 		margin-bottom: 25px;
+		padding: 40px 0 42px;
 	}
 
 	.history__content {
-		height: 408px;
+		height: 409px;
 		width: 100%;
 	}
 	.history__item:nth-child(-n + 11) {
 		margin-right: 62px;
+	}
+	.history__button::after {
+		left: 40%;
 	}
 	.history__period:last-child {
 		padding-bottom: 30px;
@@ -2462,15 +2494,14 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		height: 202px;
 	}
 	.events__button {
-		margin: 0px auto 79px;
-		padding: 15px 32px;
+		margin: 0px auto 80px;
 		font-size: 18px;
 	}
 	.events__block {
 		height: 683px;
 	}
 	.events__container {
-		margin-bottom: 31px;
+		margin-bottom: 33px;
 	}
 	.events__img {
 		max-height: 200px;
@@ -2533,9 +2564,12 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.editions__content {
 		padding: 85px 0 45px;
 	}
+	.editions__cost-price {
+		padding: 10px 0 10px 9px;
+	}
 	.editions__price h3 {
 		font-size: 16px;
-		margin-bottom: 14px;
+		margin-bottom: 13px;
 	}
 
 	.editions__size-swiper {
@@ -2543,7 +2577,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 	/*  */
 	.detailed__title {
-		margin-bottom: 20px;
+		margin-bottom: 21px;
 	}
 	.detailed__descr {
 		width: 100%;
@@ -2596,13 +2630,13 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 	.contacts__left {
 		width: 100%;
-		padding: 125px 53px 103px 49px;
+		padding: 124px 53px 103px 49px;
 	}
 	.contacts__communication {
 		margin-bottom: 18px;
 	}
 	.contacts__street {
-		margin-bottom: 35px;
+		margin-bottom: 36px;
 		font-size: 17px;
 	}
 	.contacts__office {
@@ -2610,22 +2644,26 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		margin-bottom: 12px;
 	}
 	.form__title {
-		margin-bottom: 19px;
+		margin-bottom: 18px;
 	}
 	.form input {
 		width: 335px;
-		padding: 10px 25px;
+	}
+	.form__name {
+		padding-bottom: 10px;
 	}
 	.form__name,
 	.form__tel {
 		margin-bottom: 23px;
 	}
 	.form__tel {
-		margin-bottom: 21px;
+		margin-bottom: 22px;
+		padding-bottom: 9px;
 	}
 	.form__button {
 		font-size: 18px;
-		padding: 17px 33px;
+		line-height: 25px;
+		padding: 15px 33px;
 	}
 	.footer__social:nth-child(2) {
 		margin: 0 23px;
@@ -2642,7 +2680,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		height: 100%;
 	}
 	.footer__elem:last-child {
-		margin-right: 2px;
+		margin-right: 0;
 	}
 	.footer__elem:not(:last-child) {
 		margin-right: 30px;
@@ -2673,11 +2711,15 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		padding: 29px 0px 28px;
 	}
 	.logo {
-		width: 187px;
+		margin-right: 9px;
 	}
 
 	.header__burger {
 		margin: 0;
+		height: 43px;
+	}
+	.header__line::after {
+		bottom: -24px;
 	}
 	.start__descr {
 		width: 100%;
@@ -2742,15 +2784,15 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		margin: 0;
 		width: 27px;
 		height: 35px;
-		left: -1px;
-		bottom: -2px;
+		left: 0px;
+		bottom: -1px;
 	}
 
 	.content-1 {
 		width: 318px !important;
 	}
 	.history__unity-block {
-		padding: 72px 0 55px;
+		padding: 72px 0 54px;
 	}
 	.history__descr {
 		font-size: 16px;
@@ -2762,10 +2804,10 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.history__right {
 		width: 100%;
 		order: 0;
-		margin-bottom: 51px;
+		margin-bottom: 50px;
 	}
 	.history__button {
-		right: 2px;
+		right: 1px;
 	}
 	.history__name {
 		margin-bottom: 12px;
@@ -2782,7 +2824,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		height: 313px;
 	}
 	.history__header {
-		margin-bottom: 15px;
+		margin-bottom: 1px;
 	}
 
 	.history__item {
@@ -2790,9 +2832,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		line-height: 32px;
 		font-weight: normal;
 	}
-	.history__title-button {
-		padding: 43px 0;
-	}
+	
 	.history__item:nth-child(-n + 11) {
 		margin: 0;
 	}
@@ -2806,11 +2846,10 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		width: 100%;
 	}
 	.history__countries {
-		padding: 0 0 0 40px;
+		padding: 0 0 14px 40px;
 		margin-top: 12px;
 	}
 	.history__title {
-		margin-top: auto;
 		margin-bottom: 0;
 	}
 	.history__elem {
@@ -2878,7 +2917,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 	.events__img {
 		max-height: 199px;
-		margin-bottom: 0;
+		margin-bottom: 15px;
 	}
 	.enents__title {
 		font-size: 24px;
@@ -2925,7 +2964,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		font-size: 16px;
 	}
 	.events__adress {
-		margin: 16px 15px 3px;
+		margin: 0px 15px 3px;
 		line-height: 16px;
 		font-weight: 600;
 	}
@@ -2944,7 +2983,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.editions__content {
 		flex-direction: column;
 		justify-content: flex-start;
-		padding: 89px 0 81px;
+		padding: 89px 0 80px;
 	}
 	.content-2 {
 		display: flex;
@@ -2956,11 +2995,9 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 
 	.editions__books .slide-list {
 		margin: 0;
-		padding: 13px 0 30px;
+		padding: 13px 0 29px;
 	}
-	.events__button {
-		margin: 0px auto 79px;
-	}
+	
 	.contacts__social {
 		height: 100%;
 	}
@@ -2979,7 +3016,6 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 
 	.editions__button {
 		font-size: 16px;
-		padding: 8px 19px;
 	}
 	.editions img {
 		width: 289px;
@@ -3005,7 +3041,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		width: 90%;
 	}
 	.partners__btn {
-		top: 35%;
+		top: 33%;
 	}
 	.partners__border {
 		height: 105px;
@@ -3017,15 +3053,14 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 	.detailed__descr a {
 		display: flex;
-		flex-basis: 100%;
-		font-weight: 600;
+		
+		width: 39%;
 	}
 	.detailed__unity-block {
-		padding: 85px 0 28px;
+		padding: 85px 0 27px;
 	}
 	.detailed__icon {
-		left: -7px;
-		bottom: 7px;
+		left: -3px;
 	}
 	.footer__social {
 		width: 69px;
@@ -3056,29 +3091,31 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.partners__block {
 		padding-bottom: 77px;
 	}
+	.contacts__title {
+		margin-bottom: 21px;
+	}
 	.contacts__left {
-		padding-bottom: 82px;
-		padding-right: 43px;
+		padding: 125px 43px 83px  49px;
+
 	}
 	.contacts__street {
-		margin-bottom: 36px;
+		margin-bottom: 35px;
 	}
-	.form input {
-		width: 336px;
-		padding: 10px 22px;
+	.form__name {
+		padding-bottom: 9px;
 	}
-	.form__name,
 	.form__tel {
-		margin-bottom: 22px;
+		padding-bottom: 10px;
 	}
+
 	.contacts__communication {
-		margin-bottom: 18px;
+		margin-bottom: 17px;
 	}
 	.footer__elem {
-		width: 64px;
+		width: 62px;
 	}
 	.footer__elem:not(:last-child) {
-		margin-right: 26px;
+		margin-right: 28px;
 	}
 }
 
@@ -3094,7 +3131,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.unity-top {
 		display: flex;
 		justify-content: space-between;
-		padding: 11px 0px 12px;
+		padding: 11px 0px 10px;
 	}
 	.unity-bottom {
 		padding: 14px;
@@ -3102,6 +3139,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 
 	.logo {
 		width: 97px;
+		height: 24px;
 	}
 	.header__line,
 	.header__line::before,
@@ -3129,7 +3167,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	}
 	.header__burger {
 		width: 24px;
-		height: 20px;
+		height: 22px;
 	}
 	.header__menu {
 		bottom: -44px;
@@ -3143,8 +3181,8 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		height: 16px;
 		bottom: 1px;
 		position: relative;
-		right: 6px;
-		left: 1px;
+		bottom: 2px;
+		left: 0px;
 	}
 	.start__info {
 		padding: 77px 0 45px;
@@ -3213,6 +3251,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.gallery__descr {
 		line-height: 32px;
 		width: 95%;
+		bottom: 1px;
 	}
 	.gallery__sort {
 		width: 99%;
@@ -3335,12 +3374,13 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		background-size: cover;
 	}
 	.history__title-button {
-		padding: 26px 0 25px;
+		padding: 20px 0  19px;
 		font-size: 18px;
 		margin-bottom: 0px;
 	}
 	.ui-accordion-header-active {
 		margin-bottom: 21px;
+		padding: 20px 0;
 	}
 	.history__title-button .history__title-button span {
 		font-size: 18px;
@@ -3364,7 +3404,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		margin-bottom: 22px;
 	}
 	.history__right {
-		margin-bottom: 53px;
+		margin-bottom: 51px;
 	}
 	.history__item {
 		font-weight: 500;
@@ -3376,6 +3416,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 
 	.events__img {
 		max-height: 197px;
+		margin-bottom: 17px;
 	}
 	.descr-2 {
 		padding-right: 2px;
@@ -3393,7 +3434,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		height: 730px;
 	}
 	.events__adress {
-		margin: 18px 10px 2px;
+		margin: 0px 10px 3px;
 		font-weight: normal;
 	}
 	.swiper-pagination {
@@ -3591,7 +3632,9 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 		left: 0px;
 		top: 3px;
 	}
-
+	.detailed__descr a {
+		width: 100%;
+	}
 	.editions__size {
 		height: auto !important;
 	}
@@ -3606,6 +3649,7 @@ input[type="checkbox"]:checked + .editions__category-text::after {
 	.contacts__left {
 		padding: 0;
 		padding-left: 3px;
+		position: static;
 	}
 	.popup-3 {
 		width: auto;
